# Max-Compression

./: .clang-format  .editorconfig  .gitattributes  .gitignore  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  SECURITY.md  babel_benchmark_results.txt  benchmark_babel.sh  benchmark_results.csv  benchmark_results.md  maxcomp.pc.in  valgrind.supp
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pypi.yml  release.yml  wasm.yml
babel/: prototype.py
benchmarks/: CMakeLists.txt  README.md  advanced_bench.py  bench.sh  bench_compress.c  benchmark_corpus.py  benchmark_results.csv  benchmark_results.json  benchmark_results.md  compare.sh  compare_v1.py  corpus_manager.py  demo.sh  l6_vs_l9_silesia.md  pro_bench.py  results.json  results.md
bindings/python/: README.md  __init__.py  maxcomp.py  pyproject.toml  setup.py
bindings/rust/: Cargo.toml  build.rs
bindings/rust/src/: lib.rs
build_dbg/: CMakeCache.txt  CTestTestfile.cmake  Makefile  MaxCompressionConfig.cmake  cmake_install.cmake  maxcomp.pc
build_dbg/benchmarks/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_dbg/cli/: Makefile  cmake_install.cmake
build_dbg/lib/: Makefile  cmake_install.cmake
build_dbg/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cli/: CMakeLists.txt  main.c
cmake/: MaxCompressionConfig.cmake.in
completions/: mcx.bash  mcx.fish  mcx.zsh
docs/: API.md  DEEP_RESEARCH_NATURE_FUSION.md  DESIGN.md  Doxyfile  FORMAT.md  GUIDE_COMPRESSION_ALGORITHMS.md  RESULTS.md  RESULTS_REPORT.md  ROADMAP.md  SUMMARY_FR.md  V2_DESIGN.md  analysis_sao.md  analysis_xray.md  lib-port-plan.md  mcx.1  research.md
examples/: demo.py  simple.c
include/maxcomp/: maxcomp.h
lib/: CMakeLists.txt  compat.h  core.c  internal.h
lib/analyzer/: analyzer.c  analyzer.h
lib/babel/: babel_dict.h  babel_stride.c  babel_stride.h  babel_transform.c  babel_transform.h
lib/cm/: cm.c  cm.h
lib/entropy/: adaptive_ac.c  adaptive_ac.h  ans.c  cmrans_sparse.c  entropy.h  fse.c  huffman.c  lz_models.h  mcx_fse.h  multi_rans.c  range_coder.c  range_coder.h  rc_bwt.c
lib/experimental/: babel_dict.c  babel_dict_v2.c
lib/lz/: bt_match.c  bt_match.h  hc_match.c  hc_match.h  lz24.c  lz_compress.c  lz_decompress.c  lz_multistream.c  lzrc.c  lzrc.h  mcx_lz.h
lib/lz_fast/: mcx_lz_fast.h  mcx_lz_fast_compress.c  mcx_lz_fast_decompress.c
lib/model/: context.c  model.h
lib/optimizer/: genetic.c  genetic.h
lib/preprocess/: bwt.c  delta.c  e8e9.c  lzp.c  nibble_split.c  preprocess.h  rle.c  rle2.c
lib/simd/: mcx_simd.h
research/: PROGRAM.md  RESEARCH_LOG.md  ablation.sh  exp001_pch  exp001_pch.c  exp002_babel_dict  exp002_babel_dict.c  exp002b_real_test.sh  exp003_bitbwt  exp003_bitbwt.c  exp004_approx  exp004_approx_match.c  exp005_approx_lzrc  exp005_approx_lzrc.c  exp005b  exp005b_clean.c  exp006_xor  exp006_xor_match.c  exp007_predbwt  exp007_predbwt.c  exp008_repair  exp008_repair.c  exp009  exp009_repair_rans.c  exp010_repair_mcx.sh  exp011  exp011_repair_bwt.c  exp012  exp012_bwt_repair.c  exp013  exp013_cm_lite.c  exp013b  exp013b_cm_measure.c  exp014  exp014_cm_v2.c  exp015  exp015_cm_statemap.c  exp015_cm_statemap.c.bak  exp016  exp016_cm_fast.c  (+4 more)
tests/: CMakeLists.txt  bench_babel_params.c  bench_dict_bwt.c  bench_fast.c  bench_silesia.c  debug_strategy.c  fuzz_lzrc.c  fuzz_roundtrip.c  generate_fuzz_corpus.sh  portable.sh  probe12_blocks.c  probe12_real.c  test_adaptive_ac.c  test_babel_dict.c  test_bench_flags.sh  test_bwt_levels.c  test_cli_flags.sh  test_comprehensive.c  test_debug.c  test_decompress_check.sh  test_double_bwt.c  test_dual_rans.c  test_edge_cases.c  test_fse.c  test_fse_mini.c  test_hybrid.c  test_levels.c  test_lz.c  test_lz_overhead.c  test_lzrc.c  test_malformed.c  test_mt_params.c  test_multi_rans.c  test_multifile.sh  test_overhead.c  test_preserve_mtime.sh  test_ptt5_paths.c  test_regression.c  test_rle2.c  test_rle2_pipe.c  (+7 more)
tests/experimental/: analyze_cmrans.c  bench_babel.c  bench_bwt_aac.c  bench_bwt_aac_small.c  bench_fast.c  bench_full.c  bench_pipeline_variants.c  bench_silesia.c  probe12.c  probe12_stage.c  test_babel.c  test_cmrans.c  test_cmrans_sparse.c  test_ctx_stats.c  test_entropy_compare.c  test_group_sweep.c  test_lzfse.c  test_mcx12_bwt.c  test_mrans_rt.c  test_mtf_ctx.c  test_rle2_debug.c  test_stride_detect.c
tests/fuzz_corpus/: .gitignore
wasm/: README.md  build.sh
