[package]
name = "maxcomp"
version = "2.2.0"
edition = "2021"
authors = ["Dreams-Makers Studio"]
description = "High-ratio lossless data compression library — Rust bindings for MaxCompression (MCX)"
license = "GPL-3.0"
repository = "https://github.com/SamDreamsMaker/Max-Compression"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
